--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-step-progress",
   "description": "Vue 3 step progress bar with compostion api",
-  "version": "0.2.2",
+  "version": "0.2.4",
   "author": {
     "name": "Subham Ghimire",
     "email": "subham.ghimire26@gmail.com"
@@ -35,7 +35,9 @@
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -56,7 +58,8 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vuepress": "^2.0.0-beta.36"
   },
   "peerDependencies": {
     "vue": "^3.0.5"
