--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 /dist/
 docs/.vuepress/.cache/
 docs/.vuepress/.temp/
+/docs/.vuepress/dist/
+
 # local env files
 .env.local
 .env.*.local
